Container/Kubernetes/k3s-soniiit/RabbitMQ/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq
  namespace: rabbitmq
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rabbitmq.home.soniiit.net`)
      kind: Rule
      services:
        - name: rabbitmq
          port: 15672
  tls:
    secretName: home-soniiit-net-selfsigned-tls
